# SEER

./: LICENSE  README.md  pyproject.toml
SEER/: monitor.py  payloads.py  seer.py  setup.py  test.py
cli/: go.mod  main.go
seerpy/: __init__.py  payloads.py  seer.py  setup.py
seerpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
seerpy/failed_payloads/: heartbeat_20250904192039445037.json
tests/: test.py  test_2.py
